# Tenancy

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  smoke_test.py  vite.config.ts
docs/: CONTINUATION_2026-07-08.md  DAVE_RUNBOOK_2026-05-06.docx  DAVE_SOUL.md  INTENTION_TIMER_armC_design.md  KICKOFF_perpetual-memory-REEL-and-transformer-outreach.md  PROJECT_MEMOIR.md  RING4_RECALL_AND_OUTREACH_INSTRUMENTATION_design.md  SESSION_2026-07-08_corpus-inspector-and-memory-horizon.md  consolidate-memory.md  model_ab_2026-07-08_battery.md  model_ab_2026-07-08_multiturn.md  natural-command.md  open-issues.md  outreach-a2-design.md  piy-lite-design.md
framework_v5/: CONTEXT.md
personas/: README.md  assistant.txt  dave.txt  katherine.txt  minimal.txt
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: chat_pacing.rs  chat_triage.rs  commands.rs  consolidation.rs  discriminator.rs  harness.rs  headless.rs  idle_worker.rs  intention.rs  leak.rs  llama_client.rs  main.rs  memory_assembler.rs  outreach.rs  persistence.rs  presence.rs  prompts.rs  recall.rs  sidecar.rs  time_awareness.rs
src/components/: Composer.tsx  Conversation.tsx  DepartureLine.tsx  DropsPanel.tsx  JournalEntry.tsx  JournalPanel.tsx  MemoryInspector.tsx  Message.tsx  SettingsPanel.tsx  StatusBar.tsx  TypingIndicator.tsx
src/lib/: memory.ts  tauri.ts  time.ts
src/state/: store.ts
src/styles/: fonts.css  (+1 more)
tools/: corpus_inspect.py  intention_ask_smoke.py  recall_echo_smoke.py
training/: README.md
(+105 files in other folders)
